# python-typing

./: .gitignore  README.md  data_types.py  models.py  pyproject.toml
python/: main.py  pyproject.toml
python/scripts/: cleanup.sh
python/src/demo/: models.py
src/demo/: __init__.py
typescript/: README.md  package-lock.json  package.json
typescript/src/: __init__.ts  collections.ts  core.ts  handle.ts  history.ts  path.ts  reactive.ts  resource.ts  schema.ts  types.ts  utils.ts
